Criação do componente de navegação

--- a/frontend/src/app/components/template/footer/footer.component.css
+++ b/frontend/src/app/components/template/footer/footer.component.css
@@ -1,12 +1,13 @@
 .footer {
     position: fixed;
     bottom: 0;
+    height: 35px;
 
     display: flex;
     justify-content: flex-end;
 }
 
 .footer span {
-   font-size: 0.8rem;
-   font-weight: 200;  
+   font-size: 0.7rem;
+   font-weight: 250;  
 }
