--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -1,19 +1,19 @@
 <mat-sidenav-container class="container">
     <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="40">
         <mat-nav-list class="nav-list">
-            <a mat-list-item>
+            <a mat-list-item routerLink="/">
                 <i class="material-icons">
                     home
                 </i>
                 Home
             </a>
-            <a mat-list-item>
+            <a mat-list-item routerLink="/dados">
                 <i class="material-icons">
                     list_alt
                 </i>
                 Dados
             </a>
-            <a mat-list-item>
+            <a mat-list-item routerLink="/grafico">
                 <i class="material-icons">
                     leaderboard
                 </i>
@@ -21,5 +21,8 @@
             </a>
         </mat-nav-list>
     </mat-sidenav>
+    <mat-sidenav-content class="content">
+       <router-outlet></router-outlet>
+    </mat-sidenav-content>
 </mat-sidenav-container>
 
