--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,3 +10,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .v-middle {
     vertical-align: middle;
 }
+
+.black {
+    color: rgb(0, 0, 0);
+}
