--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -2,16 +2,5 @@
     display: flex;
     align-items: center;
     height: 40px;
-}
-
-.header a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-}
-
-
-
-.header .title-group i {
-    padding-right: 15px;
+    padding-left: 50px;
 }
